# matrix-toy

./: CMakeLists.txt  LICENSE  README.md  build2  main.cpp  mat.cpp  sdl.cpp  win.cpp  win.h  window.fl
src/: main.cpp  mat.h  sdl.cpp  sdl.h
src/fl/: window.cxx  window.h
